--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -10,8 +10,14 @@
     <height>84</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Audio Echo Demo</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <widget class="QProgressBar" name="digitalValueBar">
@@ -52,7 +58,7 @@
      <number>100</number>
     </property>
     <property name="value">
-     <number>25</number>
+     <number>10</number>
     </property>
     <property name="orientation">
      <enum>Qt::Horizontal</enum>
@@ -211,7 +217,7 @@
      <string notr="true">color : #993333;</string>
     </property>
     <property name="text">
-     <string>25%</string>
+     <string>10%</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
